[package]
name = "cpf"
version = "0.1.4"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
edition = "2018"
description = "Brazilian CPF parsing, validating and formatting library."
categories = ["no-std"]
keywords = ["cpf", "Brasil", "Brazil"]
documentation = "https://docs.rs/cpf"
license = "MIT"
repository = "https://github.com/reu/cpf-rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
arrayvec = "0.7"
rand = { version = "0.8", optional = true }

[features]
default = ["std"]
std = []
full = ["std", "rand"]
