[package]
name = "cpf"
version = "0.3.0"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
edition = "2018"
description = "Brazilian CPF parsing, validating and formatting library."
categories = ["no-std"]
keywords = ["cpf", "Brasil", "Brazil"]
documentation = "https://docs.rs/cpf"
license = "MIT"
repository = "https://github.com/reu/cpf-rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand = { version = "0.8", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false, features = ["std", "std_rng", "small_rng"] }

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]
full = ["serde", "std", "rand"]
